# smol

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Cross.toml  README.md  certificate.pem  identity.pfx  rustfmt.toml
.github/: FUNDING.yml
.github/actions-rs/: grcov.yml
.github/workflows/: build-and-test.yaml  ci.yml  coverage.yaml  coverage.yml  cross.yaml  lint.yaml  release.yml  security.yaml
benches/: blocking.rs  spawn.rs
demos/: Cargo.toml  README.md  async-h1-client.rs  async-h1-server.rs  chat-client.rs  chat-server.rs  ctrl-c.rs  hyper-client.rs  hyper-server.rs  linux-inotify.rs  linux-timerfd.rs  other-runtimes.rs  simple-client.rs  simple-server.rs  tcp-client.rs  tcp-server.rs  tls-client.rs  tls-server.rs  unix-signal.rs  web-crawler.rs  websocket-client.rs  websocket-server.rs  windows-uds.rs
eventvar/: Cargo.toml
eventvar/src/: lib.rs
examples/: Cargo.toml  README.md  async-h1-client.rs  async-h1-server.rs  async-h1.rs  chat-client.rs  chat-server.rs  client-async-h1.rs  client-hyper.rs  client-simple.rs  compat-async-std.rs  compat-reqwest.rs  compat-surf.rs  compat-tokio.rs  ctrl-c.rs  ctrl_c.rs  futures-collect.rs  get-request.rs  hello-world.rs  http-get.rs  hyper-client.rs  hyper-server.rs  hyper.rs  linux-inotify.rs  linux-timerfd.rs  netcat.rs  netlink-route.rs  other-runtimes.rs  process-output.rs  process-run.rs  read-dir.rs  read-file.rs  server-async-h1.rs  server-hyper.rs  server-simple.rs  simple-client.rs  simple-server.rs  smol-in-tokio.rs  stdin-to-stdout.rs  stdin.rs  (+17 more)
io-flag/: Cargo.toml
io-flag/src/: lib.rs
piper/: Cargo.toml
piper/src/: arc.rs  chan.rs  lib.rs  lock.rs  mutex.rs  pipe.rs  shared.rs  signal.rs
piper/tests/: chan.rs
src/: async_io.rs  block_on.rs  blocking.rs  context.rs  examples.rs  executor.rs  io_event.rs  io_flag.rs  io_parking.rs  lib.rs  multitask.rs  net.rs  parking.rs  prelude.rs  reactor.rs  run.rs  spawn.rs  sys.rs  task.rs  thread_local.rs  throttle.rs  timer.rs  web.rs  work_stealing.rs
tests/: async_io.rs  block_on.rs  futures.rs  task.rs  timer.rs
web-example/: .gitignore  Cargo.toml  build.sh
web-example/src/: lib.rs
wepoll-sys/: .gitlab-ci.yml  Cargo.toml  README.md  build.rs  rustfmt.toml
wepoll-sys/bindgen-bindings/: bindings.rs
wepoll-sys/scripts/: lint_bindgen.rb
wepoll-sys/src/: lib.rs
wepoll-sys/wepoll/: wepoll.c
