[package]
name = "smol-demos"
version = "0.0.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
publish = false

[target.'cfg(windows)'.dependencies]
uds_windows = "0.1.4"

[target.'cfg(target_os = "linux")'.dependencies]
inotify = { version = "0.8.2", default-features = false }
nix = "0.17.0"
timerfd = "1.1.1"

[dependencies]
anyhow = "1.0.28"
async-h1 = "1.1.2"
async-native-tls = { version = "0.3.3", features = ["vendored"] }
async-std = "1.5.0"
async-tungstenite = { version = "0.4.2", features = ["async-native-tls"] }
base64 = "0.12.0"
ctrlc = "3.1.4"
futures = "0.3.4"
http = "0.2.1"
http-types = "1.2.0"
hyper = { version = "0.13.5", default-features = false, features = ["stream"] }
native-tls = "0.2.4"
num_cpus = "1.13.0"
piper = "0.1.1"
reqwest = "0.10.4"
scraper = "0.11.0"
signal-hook = "0.1.13"
smol = { path = "../", features = ["tokio02"] }
surf = { version = "2.0.0-alpha.1", default-features = false, features = ["h1-client"] }
tempfile = "3.1.0"
tokio = { version = "0.2.18", default-features = false }
tungstenite = "0.10.1"
url = "2.1.1"

[[bin]]
name = "async-h1-server"
path = "async-h1-server.rs"

[[bin]]
name = "chat-client"
path = "chat-client.rs"

[[bin]]
name = "chat-server"
path = "chat-server.rs"

[[bin]]
name = "ctrl-c"
path = "ctrl-c.rs"

[[bin]]
name = "hyper-client"
path = "hyper-client.rs"

[[bin]]
name = "hyper-server"
path = "hyper-server.rs"

[[bin]]
name = "linux-inotify"
path = "linux-inotify.rs"

[[bin]]
name = "linux-timerfd"
path = "linux-timerfd.rs"

[[bin]]
name = "other-runtimes"
path = "other-runtimes.rs"

[[bin]]
name = "simple-client"
path = "simple-client.rs"

[[bin]]
name = "simple-server"
path = "simple-server.rs"

[[bin]]
name = "tcp-client"
path = "tcp-client.rs"

[[bin]]
name = "tcp-server"
path = "tcp-server.rs"

[[bin]]
name = "tls-client"
path = "tls-client.rs"

[[bin]]
name = "tls-server"
path = "tls-server.rs"

[[bin]]
name = "unix-signal"
path = "unix-signal.rs"

[[bin]]
name = "web-crawler"
path = "web-crawler.rs"

[[bin]]
name = "websocket-client"
path = "websocket-client.rs"

[[bin]]
name = "websocket-server"
path = "websocket-server.rs"

[[bin]]
name = "windows-uds"
path = "windows-uds.rs"
