[package]
name = "smol examples"
version = "0.0.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
publish = false
autoexamples = false
autobins = false

[target.'cfg(windows)'.dev-dependencies]
uds_windows = "0.1.4"

[target.'cfg(target_os = "linux")'.dev-dependencies]
inotify = { version = "0.8.2", default-features = false }
timerfd = "1.1.1"

[dev-dependencies]
anyhow = "1.0.28"
async-h1 = "1.1.2"
async-native-tls = "0.3.3"
async-std = "1.5.0"
async-tungstenite = { version = "0.4.2", features = ["async-native-tls"] }
base64 = "0.12.0"
ctrlc = "3.1.4"
http = "0.2.1"
http-types = "1.2.0"
hyper = { version = "0.13.5", default-features = false, features = ["stream"] }
native-tls = "0.2.4"
num_cpus = "1.13.0"
reqwest = "0.10.4"
scraper = "0.11.0"
signal-hook = "0.1.13"
smol = { path = "../", features = ["tokio02"] }
surf = { version = "2.0.0-alpha.1", default-features = false, features = ["h1-client"] }
tempfile = "3.1.0"
tokio = { version = "0.2.18", default-features = false }
tungstenite = "0.10.1"
url = "2.1.1"

[[example]]
name = "async-h1-client"
path = "async-h1-client.rs"

[[example]]
name = "async-h1-server"
path = "async-h1-server.rs"

[[example]]
name = "chat-client"
path = "chat-client.rs"

[[example]]
name = "chat-server"
path = "chat-server.rs"

[[example]]
name = "hyper-client"
path = "hyper-client.rs"

[[example]]
name = "hyper-server"
path = "hyper-server.rs"

[[example]]
name = "linux-inotify"
path = "linux-inotify.rs"

[[example]]
name = "linux-timerfd"
path = "linux-timerfd.rs"

[[example]]
name = "other-runtimes"
path = "other-runtimes.rs"

[[example]]
name = "simple-client"
path = "simple-client.rs"

[[example]]
name = "simple-server"
path = "simple-server.rs"

[[example]]
name = "tcp-client"
path = "tcp-client.rs"

[[example]]
name = "tcp-server"
path = "tcp-server.rs"

[[example]]
name = "tls-client"
path = "tls-client.rs"

[[example]]
name = "tls-server"
path = "tls-server.rs"

[[example]]
name = "unix-signal"
path = "unix-signal.rs"

[[example]]
name = "web-crawler"
path = "web-crawler.rs"

[[example]]
name = "websocket-client"
path = "websocket-client.rs"

[[example]]
name = "websocket-server"
path = "websocket-server.rs"

[[example]]
name = "simple-client"
path = "simple-client.rs"

[[example]]
name = "windows-uds"
path = "windows-uds.rs"
