[package]
name = "piper"
version = "0.1.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
description = "WIP"
license = "MIT OR Apache-2.0"

[dependencies]
crossbeam-utils = "0.7.0"
futures = { version = "0.3.4", default-features = false, features = ["std"] }

[dev-dependencies]
smol = { path = ".." }
